# Hex8

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: marker-layout.md  phase3-baseline.md  phase4-manual-test-guide.md
hex8/: __init__.py  cli.py  degrade.py
hex8/camera/: __init__.py  capture.py  live_demo.py
hex8/common/: __init__.py  canvas.py  ecc.py  header.py  hexgrid.py  layout.py  symbols.py
hex8/decoder/: __init__.py  classify.py  correct.py  decode.py  detect.py
hex8/encoder/: __init__.py  encode.py  render.py
tests/: test_cli.py  test_degrade.py  test_scaffolding.py
tests/camera/: test_capture.py  test_live_demo.py
tests/common/: __init__.py  test_canvas.py  test_ecc.py  test_header.py  test_hexgrid.py  test_layout.py  test_symbols.py
tests/decoder/: test_classify.py  test_correct.py  test_decode.py  test_detect.py  test_detect_robust.py
tests/encoder/: test_encode.py  test_render.py
