[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hex8"
version = "0.1.0"
description = "Hex8 Marker PoC - high-density camera-readable 2D marker using 8-color hexagonal cells"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "reedsolo>=1.7",
]

[project.optional-dependencies]
encoder = ["pillow>=10.0"]
decoder = ["opencv-python-headless>=4.9", "scikit-image>=0.22"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["hex8*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
